# caetec-cow-classification

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.yml  requirements.txt  script.py
docs/: README.md
docs/api/: inference.md
docs/guides/: inference.md  installation.md  training.md
examples/: inference-no-render.txt
research/: inference_comparison.py
scripts/: run_inference.py  train_model.py
src/cow_detection/: configs.py  detection_tracker.py  inference.py  trainer.py  yolo_base.py
src/cow_detection/scripts/: run_inference.py  train_model.py
